--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Viewer</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        #order-id {
+            font-size: 24px;
+            font-weight: bold;
+            color: #007bff;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 
 <body>
@@ -13,7 +32,10 @@
 
     <script>
         // Extract the order ID from the URL
-        const orderId = window.location.pathname.split('/').pop();
+        const pathSegments = window.location.pathname.split('/'); // Split the path
+        const orderId = pathSegments[pathSegments.length - 1]; // Get the last segment
+
+        // Display the order ID
         document.getElementById('order-id').innerText = "Order ID: " + orderId;
     </script>
 </body>
