--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         // Function to get query parameters
         function getQueryParameter(param) {
             const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(param);
+            return urlParams.get(param); // Get value of the 'id' parameter
         }
 
         // Get the order ID from the query string
-        const orderId = getQueryParameter('id'); // assuming your query parameter is named 'id'
+        const orderId = getQueryParameter('id');
 
         // Display the order ID or a message if not provided
         document.getElementById('order-id').innerText = orderId ? "Order ID: " + orderId : "No Order ID provided";
